# ImportSearch

./: .gitignore  .vercelignore  Pipfile  README.md  Steps to run the server.txt  db.sqlite3  manage.py  pipenvrun.bat  pyproject.toml  requirements.txt  vercel.json
.serena/: project.yml
ImportSearch/: asgi.py  settings.py  urls.py  wsgi.py
Scripts/: Check_Multiprocess.py  Search_Multiprocess.py  convert_excel.py  create_table.py  delete.py  elastic.py  fetch.py  run_pipenv.py  test.py  testxlsx.py
SearchApp/: delete.py  models.py  views.py
SearchApp/migrations/: 0001_initial.py
static/css/: styles.css
static/js/: awaves.js  noise.js
templates/SearchApp/: Display_Months.html  Home.html  Insert.html  Loading.html  Results copy.html  Results-page.html  Results.html  Search-page.html  Search_BOM.html  Upload.html
templates/login/: Results.html  login.html
