[tool.poetry]
name = "importsearch"
version = "0.1.0"
description = ""
authors = ["nggyu <chiragreddy272@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.5"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.2"
django-background-tasks = "^1.2.8"
pandas = "^2.2.3"
modin = {extras = ["all"], version = "^0.32.0"}
pyexcelerate = "^0.12.0"
python-calamine = "^0.3.1"
openai = "^1.68.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
